RESOLVED FIXED224569
Keep UniqueRef<MathICGenerationState> instead of MathICGenerationState in HashTables
https://bugs.webkit.org/show_bug.cgi?id=224569
Summary Keep UniqueRef<MathICGenerationState> instead of MathICGenerationState in Has...
Alex Christensen
Reported 2021-04-14 12:17:19 PDT
Keep UniqueRef<MathICGenerationState> instead of MathICGenerationState in HashTables
Attachments
Patch (6.45 KB, patch)
2021-04-14 12:25 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2021-04-14 12:25:37 PDT
Geoffrey Garen
Comment 2 2021-04-14 12:50:32 PDT
Comment on attachment 426030 [details] Patch r=me
EWS
Comment 3 2021-04-14 16:55:17 PDT
Committed r275979 (236531@main): <https://commits.webkit.org/236531@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 426030 [details].
Radar WebKit Bug Importer
Comment 4 2021-04-14 16:56:19 PDT
Note You need to log in before you can comment on or make changes to this bug.