Keep UniqueRef<MathICGenerationState> instead of MathICGenerationState in HashTables https://bugs.webkit.org/show_bug.cgi?id=224569

Patch by Alex Christensen <achristensen@webkit.org> on 2021-04-14
Reviewed by Geoffrey Garen.

sizeof(KeyValuePair<const Instruction*, MathICGenerationState>) is 136 on some platforms.
That's on the big side for sparse HashTable entries.  I think using UniqueRef will help performance.

* jit/JIT.h:
* jit/JITArithmetic.cpp:
(JSC::JIT::emitMathICFast):
(JSC::JIT::emitMathICSlow):
* jit/JITMathIC.h:

Canonical link: https://commits.webkit.org/236531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275979 268f45cc-cd09-0410-ab3c-d52691b4dbfc