Source/JavaScriptCore/jit/JITMathIC.h
@@ -42,6 +42,7 @@ namespace JSC {
 class LinkBuffer;
 
 struct MathICGenerationState {
+    WTF_MAKE_STRUCT_FAST_ALLOCATED;
     MacroAssembler::Label fastPathStart;
     MacroAssembler::Label fastPathEnd;
     MacroAssembler::Label slowPathStart;
